parser/parser_tests/tests_input/unit/good/Good23.ty
singleton class Wrapper { 
    
    functions: {
        getOrDefault: (x: Int) -> Int = {
            if (True) then {
                3
            } else {
                0
            }
        }
    }
}
