parser/parser_tests/tests_input/unit/bad/Bad61.ty
singleton class Loop { 
    
    actions: {
        loop: (list: SomeListType) -> Int = {
            for (element in list) {
                3
            }
            2
        }
    }
}
